- feat: update the website with latest from the demos "the changes are already old, but were not synced with the website"

--- a/my-apps/hotspotter/Editor/css/editor.css
+++ b/my-apps/hotspotter/Editor/css/editor.css
@@ -1,11 +1,9 @@
 /*
  * Title                   : Hotspotter Editor App
- * Author                  : Basm "z-B"
- * Version                 : 1.4.2
- * Last Modified           : 02-07-2014
- * My Website              : http://dbasem.com
+ * Author                  : Basem "z-B"
+ * Version                 : 2.0.1
+ * Last Modified           : 22-08-2020
  * CodeCanyon Profile      : http://codecanyon.net/user/z-B
- * License                 : http://codecanyon.net/licenses/regular_extended
  */
 body {
     background-color: #000000;
